# cgadimpl

./: .gitignore  README.md  run.txt
cgadimpl/: CMakeLists.txt  test
cgadimpl/cmake/: cgadimplConfig.cmake.in
cgadimpl/include/: tensor.hpp
cgadimpl/include/ad/: ag_all.hpp  autodiff.hpp  autodiff_ops.hpp  checkpoint.hpp  cudaops.hpp  cudarray.hpp  debug.hpp  graph.hpp  kernels_api.hpp  nodeops.hpp  ops.def  ops.hpp  optim.hpp  schema.hpp  tensor.hpp
cgadimpl/include/ad/detail/: autodiff_ops.hpp  ops.def
cgadimpl/include/ad/nn/: nn.hpp
cgadimpl/src/: autodiff.cpp  autodiff_jvp_ops.cpp  autodiff_vjp_ops.cpp  graph.cpp  nodeops.cpp  ops.cpp  optim.cpp  schema.cpp  tensor.cpp
cgadimpl/src/autodiff/: autodiff_jvp_ops.cpp  autodiff_vjp_ops.cpp  high_autodiff_vjp_ops.cpp
cgadimpl/src/core/: autodiff.cpp  checkpoint.cpp  cudaops.cpp  cudarray.cu  graph.cpp  kernels_loader.cpp  nodeops.cpp  ops.cpp  tensor.cpp
cgadimpl/src/nn/: nn.cpp
cgadimpl/src/optimizer/: optim.cpp
cgadimpl/src/tensor/: tensor.cpp
cgadimpl/src/tools/: debug.cpp
cgadimpl/tests/: Untitled-1.ipynb  bench_relu.cpp  smoke_all.cpp  test.cpp  test_ag.cpp  test_att.cpp  test_checkpoint.cpp  test_complex_mlp.cpp  test_graph_compile.cpp  test_mb.cpp  test_mlp.cpp  test_se.cpp  test_swg.cpp
include/: optim.hpp  tensor.hpp
include/ad/: autodiff.hpp  debug.hpp  export_hlo.hpp  graph.hpp  ops.def  ops.hpp  schema.hpp  tensor.hpp
include/ad/detail/: op_needs.def  ops.def
include/nn/: nn.hpp
kernels/: CMakeLists.txt
kernels/cpu/: CMakeLists.txt
kernels/cpu/benchmark/: benchmark_utils.hpp  kernels_for_test.hpp  test_kernels.cpp  test_matmul_aspect.cpp  test_matmul_cache.cpp  test_matmul_latency.cpp  test_matmul_scalability.cpp  test_matmul_throughput.cpp
kernels/cpu/src/: agkernels_cpu.cpp  matker  matker.cu  matker.cuh  test  testww
src/: autodiff.cpp  graph.cpp  ops.cpp  schema.cpp
src/autodiff/: autodiff_jvp_ops.cpp  autodiff_vjp_ops.cpp
src/core/: graph.cpp  schema.cpp
src/tools/: export_hlo.cpp
tests/: test.cpp  test_ag.cpp  test_mlp.cpp  tiny_handcalc.cpp
ztools/: run.sh
